force-app/main/default/objects/Apttus__TempObject__c/Apttus__TempObject__c.object-meta.xml
<CustomObject>
    <description>A container for temporary objects and attachments</description>
    <label>Temp Object (Comply)</label>
    <nameField>
        <displayFormat>TMP-{0000}</displayFormat>
        <label>Temp Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>