force-app/main/default/objects/Apttus__TempObject__c/fields/Apttus__AgreementId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AgreementId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated agreement</description>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Previews</relationshipLabel>
    <relationshipName>TempObjects</relationshipName>
    <type>Lookup</type>
</CustomField>