force-app/main/default/objects/Apttus__TempObject__c/fields/Apttus__ContentType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ContentType__c</fullName>
    <description>The document content type</description>
    <label>Content Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>