force-app/main/default/objects/Apttus__TempObject__c/fields/Apttus__DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DeveloperName__c</fullName>
    <description>Unique name</description>
    <inlineHelpText>Unique name</inlineHelpText>
    <label>DeveloperName</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>