force-app/main/default/objects/Apttus__TempObject__c/fields/Apttus__DocumentExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocumentExpiryDate__c</fullName>
    <description>Date to store the expiry date of documents linked to temp object</description>
    <inlineHelpText>Date to store the expiry date of documents linked to temp object</inlineHelpText>
    <label>Document Expiry Date</label>
    <type>Date</type>
</CustomField>