force-app/main/default/objects/Apttus__TempObject__c/fields/Apttus__DocumentLink__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocumentLink__c</fullName>
    <description>The hyperlink to the document associated with the object</description>
    <formula>IF (LEN(Apttus__DocumentUrl__c) &gt; 0,HYPERLINK(Apttus__DocumentUrl__c, $Label.apttus__View , &quot;_blank&quot;),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Link</label>
    <type>Text</type>
</CustomField>