force-app/main/default/objects/Apttus__TempObject__c/fields/Apttus__DocumentUrl__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocumentUrl__c</fullName>
    <description>The url of the document associated with the object</description>
    <label>Document Url</label>
    <type>Url</type>
</CustomField>