force-app/main/default/objects/Apttus__TempObject__c/fields/Apttus__Title__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Title__c</fullName>
    <description>The document title</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>