force-app/main/default/objects/Apttus__TempObject__c/fields/Apttus_Proposal__ProposalId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__ProposalId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated quote/proposal</description>
    <label>Quote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipLabel>Previews</relationshipLabel>
    <relationshipName>TempObjects</relationshipName>
    <type>Lookup</type>
</CustomField>